# simpledataframe

./: .gitignore  AGENTS.md  data_validator.py
dataframe/: README.md  WORKLOG.md  __init__.py  core.py  operations.py  pyproject.toml  series.py  utils.py
dataframe/examples/: basic_usage.py  benchmark.py  benchmark_filter.py  compare_with_pandas.py
dataframe/tests/: test_dataframe.py
