[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpledataframe"
version = "0.1.0"
description = "A lightweight pandas-like DataFrame implementation for educational purposes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["dataframe", "data", "analysis", "pandas", "educational"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/yourusername/simpledataframe"
Repository = "https://github.com/yourusername/simpledataframe"
Issues = "https://github.com/yourusername/simpledataframe/issues"

[tool.setuptools]
packages = ["dataframe"]

[tool.setuptools.package-data]
dataframe = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["dataframe/tests"]
python_files = ["test_*.py"]
